--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.11.1",
+    "antd": "^5.25.4",
     "googleapis": "^124.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
