--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,14 @@
   "type": "module",
   "dependencies": {
     "@supabase/supabase-js": "^2.32.0",
+    "axios": "^1.10.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^2.2.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.1",
     "multer": "1.4.5-lts.1",
     "pg": "^8.11.2"
